transfer balance script added to examples and updated package-lock files

--- a/examples/ethers-provider-nodejs/package.json
+++ b/examples/ethers-provider-nodejs/package.json
@@ -2,7 +2,8 @@
   "name": "example-ethers-provider-nodejs",
   "scripts": {
     "contract-interaction": "ts-node src/contract-interaction.ts",
-    "get-balance": "ts-node src/get-balance.ts"
+    "get-balance": "ts-node src/get-balance.ts",
+    "transfer-balance": "ts-node src/transfer-balance.ts"
   },
   "dependencies": {
     "@appliedblockchain/silentdatarollup-core": "file:../../packages/core",
