--- a/examples/custom-rpc/package.json
+++ b/examples/custom-rpc/package.json
@@ -7,9 +7,9 @@
     "start": "npm run custom-rpc & npm run hardhat"
   },
   "dependencies": {
-    "@appliedblockchain/silentdatarollup-core": "file:../../packages/core",
-    "@appliedblockchain/silentdatarollup-custom-rpc": "file:../../packages/custom-rpc",
-    "@appliedblockchain/silentdatarollup-ethers-provider": "file:../../packages/ethers-provider",
+    "@appliedblockchain/silentdatarollup-core": "1.0.1",
+    "@appliedblockchain/silentdatarollup-custom-rpc": "1.0.1",
+    "@appliedblockchain/silentdatarollup-ethers-provider": "1.0.1",
     "dotenv": "16.4.5",
     "hardhat": "2.22.19"
   },
