--- a/examples/ethers-provider-metamask/package.json
+++ b/examples/ethers-provider-metamask/package.json
@@ -7,8 +7,8 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
-    "@appliedblockchain/silentdatarollup-core": "file:../../packages/core",
-    "@appliedblockchain/silentdatarollup-ethers-provider": "file:../../packages/ethers-provider",
+    "@appliedblockchain/silentdatarollup-core": "1.0.1",
+    "@appliedblockchain/silentdatarollup-ethers-provider": "1.0.1",
     "@testing-library/jest-dom": "5.17.0",
     "@testing-library/react": "13.4.0",
     "@testing-library/user-event": "13.5.0",
