--- a/examples/ethers-provider-nodejs/package.json
+++ b/examples/ethers-provider-nodejs/package.json
@@ -6,8 +6,8 @@
     "transfer-balance": "ts-node src/transfer-balance.ts"
   },
   "dependencies": {
-    "@appliedblockchain/silentdatarollup-core": "file:../../packages/core",
-    "@appliedblockchain/silentdatarollup-ethers-provider": "file:../../packages/ethers-provider",
+    "@appliedblockchain/silentdatarollup-core": "1.0.1",
+    "@appliedblockchain/silentdatarollup-ethers-provider": "1.0.1",
     "dotenv": "16.4.5"
   },
   "devDependencies": {
