--- a/examples/hardhat-plugin/package.json
+++ b/examples/hardhat-plugin/package.json
@@ -5,13 +5,15 @@
     "deploy": "npx hardhat compile && npx hardhat ignition deploy ignition/modules/PrivateToken.ts",
     "deploy:simple-contract": "npx hardhat compile && npx hardhat ignition deploy ignition/modules/SimpleContract.ts"
   },
-  "devDependencies": {
-    "@appliedblockchain/silentdatarollup-hardhat-plugin": "file:../../packages/hardhat-plugin",
+  "dependencies": {
+    "@appliedblockchain/silentdatarollup-hardhat-plugin": "1.0.1",
     "@nomicfoundation/hardhat-ignition-ethers": "0.15.7",
     "@nomicfoundation/hardhat-toolbox": "5.0.0",
     "@openzeppelin/contracts": "5.1.0",
     "dotenv": "16.4.5",
-    "hardhat": "2.22.10",
+    "hardhat": "2.22.10"
+  },
+  "devDependencies": {
     "ts-node": "10.9.2",
     "typescript": "5.6.3"
   }
