--- a/packages/ethers-provider/package.json
+++ b/packages/ethers-provider/package.json
@@ -33,6 +33,7 @@
   },
   "dependencies": {
     "@appliedblockchain/silentdatarollup-core": "1.0.1",
+    "debug": "4.3.7",
     "ethers": "6.13.2"
   },
   "devDependencies": {
