--- a/packages/viem/package.json
+++ b/packages/viem/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@appliedblockchain/silentdatarollup-ethers-provider",
-  "version": "1.0.1",
-  "description": "Ethers.js provider for Silent Data [Rollup]",
+  "name": "@appliedblockchain/silentdatarollup-viem",
+  "version": "1.0.0",
+  "description": "Viem package for Silent Data [Rollup]",
   "author": "Applied Blockchain",
   "homepage": "https://github.com/appliedblockchain/silent-data-rollup-providers#readme",
   "keywords": [
@@ -9,7 +9,8 @@
     "provider",
     "silentdata",
     "rollup",
-    "ethers"
+    "ethers",
+    "viem"
   ],
   "license": "MIT",
   "repository": "https://github.com/appliedblockchain/silent-data-rollup-providers",
@@ -33,8 +34,8 @@
   },
   "dependencies": {
     "@appliedblockchain/silentdatarollup-core": "1.0.1",
-    "debug": "4.3.7",
-    "ethers": "6.13.2"
+    "@appliedblockchain/silentdatarollup-ethers-provider": "1.0.1",
+    "viem": "2.31.4"
   },
   "devDependencies": {
     "@types/node": "22.5.4",
