--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "ethers",
     "fireblocks",
     "hardhat",
-    "custom-rpc"
+    "custom-rpc",
+    "viem"
   ],
   "license": "MIT",
   "repository": "https://github.com/appliedblockchain/silent-data-rollup-providers",
@@ -19,11 +20,11 @@
     "./packages/*"
   ],
   "scripts": {
-    "build": "npm run build -w @appliedblockchain/silentdatarollup-core -w @appliedblockchain/silentdatarollup-custom-rpc -w @appliedblockchain/silentdatarollup-ethers-provider -w @appliedblockchain/silentdatarollup-ethers-provider-fireblocks -w @appliedblockchain/silentdatarollup-hardhat-plugin -w @appliedblockchain/silentdatarollup-hardhat-plugin-fireblocks",
+    "build": "npm run build -w @appliedblockchain/silentdatarollup-core -w @appliedblockchain/silentdatarollup-custom-rpc -w @appliedblockchain/silentdatarollup-ethers-provider -w @appliedblockchain/silentdatarollup-ethers-provider-fireblocks -w @appliedblockchain/silentdatarollup-hardhat-plugin -w @appliedblockchain/silentdatarollup-hardhat-plugin-fireblocks -w @appliedblockchain/silentdatarollup-viem",
     "changeset": "changeset",
     "changeset:version": "changeset version",
     "changeset:publish": "changeset publish",
-    "check-exports": "npm run check-exports -w @appliedblockchain/silentdatarollup-core -w @appliedblockchain/silentdatarollup-custom-rpc -w @appliedblockchain/silentdatarollup-ethers-provider -w @appliedblockchain/silentdatarollup-ethers-provider-fireblocks -w @appliedblockchain/silentdatarollup-hardhat-plugin -w @appliedblockchain/silentdatarollup-hardhat-plugin-fireblocks",
+    "check-exports": "npm run check-exports -w @appliedblockchain/silentdatarollup-core -w @appliedblockchain/silentdatarollup-custom-rpc -w @appliedblockchain/silentdatarollup-ethers-provider -w @appliedblockchain/silentdatarollup-ethers-provider-fireblocks -w @appliedblockchain/silentdatarollup-hardhat-plugin -w @appliedblockchain/silentdatarollup-hardhat-plugin-fireblocks -w @appliedblockchain/silentdatarollup-viem",
     "check-format": "prettier --check .",
     "format": "prettier --write .",
     "lint": "eslint .",
@@ -35,7 +36,7 @@
     "@eslint/js": "9.22.0",
     "@types/jest": "29.5.14",
     "@types/node": "22.13.10",
-    "eslint": "9.22.0",
+    "eslint": "9.31.0",
     "globals": "16.0.0",
     "jest": "29.7.0",
     "prettier": "3.5.3",
