--- a/examples/custom-rpc/package.json
+++ b/examples/custom-rpc/package.json
@@ -7,14 +7,18 @@
     "start": "npm run custom-rpc & npm run hardhat"
   },
   "dependencies": {
-    "@appliedblockchain/silentdatarollup-core": "1.0.3",
-    "@appliedblockchain/silentdatarollup-custom-rpc": "1.0.3",
-    "@appliedblockchain/silentdatarollup-ethers-provider": "1.0.3",
+    "@appliedblockchain/silentdatarollup-core": "*",
+    "@appliedblockchain/silentdatarollup-custom-rpc": "*",
+    "@appliedblockchain/silentdatarollup-ethers-provider": "*",
     "dotenv": "16.4.5",
     "hardhat": "2.22.19"
   },
   "devDependencies": {
     "ts-node": "10.9.2",
     "typescript": "5.8.2"
+  },
+  "overrides": {
+    "cookie": "0.7.0",
+    "tmp": "0.2.4"
   }
 }
