--- a/examples/ethers-provider-nodejs/package.json
+++ b/examples/ethers-provider-nodejs/package.json
@@ -6,8 +6,8 @@
     "transfer-balance": "ts-node src/transfer-balance.ts"
   },
   "dependencies": {
-    "@appliedblockchain/silentdatarollup-core": "1.0.3",
-    "@appliedblockchain/silentdatarollup-ethers-provider": "1.0.3",
+    "@appliedblockchain/silentdatarollup-core": "*",
+    "@appliedblockchain/silentdatarollup-ethers-provider": "*",
     "dotenv": "16.4.5"
   },
   "devDependencies": {
