--- a/examples/hardhat-plugin/package.json
+++ b/examples/hardhat-plugin/package.json
@@ -1,12 +1,13 @@
 {
   "name": "example-hardhat-plugin",
+  "version": "0.0.1",
   "scripts": {
     "compile": "npx hardhat compile",
     "deploy": "npx hardhat compile && npx hardhat ignition deploy ignition/modules/PrivateToken.ts",
     "deploy:simple-contract": "npx hardhat compile && npx hardhat ignition deploy ignition/modules/SimpleContract.ts"
   },
   "dependencies": {
-    "@appliedblockchain/silentdatarollup-hardhat-plugin": "1.0.3",
+    "@appliedblockchain/silentdatarollup-hardhat-plugin": "*",
     "@nomicfoundation/hardhat-ignition-ethers": "0.15.7",
     "@nomicfoundation/hardhat-toolbox": "5.0.0",
     "@openzeppelin/contracts": "5.1.0",
@@ -16,5 +17,9 @@
   "devDependencies": {
     "ts-node": "10.9.2",
     "typescript": "5.6.3"
+  },
+  "overrides": {
+    "cookie": "0.7.0",
+    "tmp": "0.2.4"
   }
 }
