--- a/packages/ethers-provider-fireblocks/package.json
+++ b/packages/ethers-provider-fireblocks/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@appliedblockchain/silentdatarollup-ethers-provider-fireblocks",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "Ethers.js provider for Silent Data [Rollup] with Fireblocks integration",
   "author": "Applied Blockchain",
   "homepage": "https://github.com/appliedblockchain/silent-data-rollup-providers#readme",
@@ -27,12 +27,12 @@
     "dist"
   ],
   "scripts": {
-    "build": "tsup src/index.ts --format cjs,esm --dts --clean",
+    "build": "tsc --noEmit && tsup src/index.ts --format cjs,esm --dts --clean",
     "check-exports": "attw --pack . --profile node16",
     "prepack": "npm run build"
   },
   "dependencies": {
-    "@appliedblockchain/silentdatarollup-core": "1.0.3",
+    "@appliedblockchain/silentdatarollup-core": "1.0.4",
     "@fireblocks/fireblocks-web3-provider": "1.3.8",
     "debug": "4.3.4",
     "ethers": "6.13.2"
