--- a/packages/ethers-provider/package.json
+++ b/packages/ethers-provider/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@appliedblockchain/silentdatarollup-ethers-provider",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "Ethers.js provider for Silent Data [Rollup]",
   "author": "Applied Blockchain",
   "homepage": "https://github.com/appliedblockchain/silent-data-rollup-providers#readme",
@@ -26,13 +26,13 @@
     "dist"
   ],
   "scripts": {
-    "build": "tsup src/index.ts --format cjs,esm --dts --clean",
+    "build": "tsc --noEmit && tsup src/index.ts --format cjs,esm --dts --clean",
     "check-exports": "attw --pack . --profile node16",
     "prepack": "npm run build",
     "test": "jest"
   },
   "dependencies": {
-    "@appliedblockchain/silentdatarollup-core": "1.0.3",
+    "@appliedblockchain/silentdatarollup-core": "1.0.4",
     "debug": "4.3.7",
     "ethers": "6.13.2"
   },
