--- a/packages/hardhat-plugin/package.json
+++ b/packages/hardhat-plugin/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@appliedblockchain/silentdatarollup-hardhat-plugin",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "description": "Hardhat plugin for Silent Data [Rollup]",
   "author": "Applied Blockchain",
   "homepage": "https://github.com/appliedblockchain/silent-data-rollup-providers#readme",
@@ -31,7 +31,7 @@
     "prepack": "npm run build"
   },
   "dependencies": {
-    "@appliedblockchain/silentdatarollup-core": "1.0.6",
+    "@appliedblockchain/silentdatarollup-core": "1.0.7",
     "@nomicfoundation/hardhat-ethers": "3.0.8",
     "debug": "4.3.7",
     "ethers": "6.13.2"
@@ -44,8 +44,8 @@
     "typescript": "5.6.2"
   },
   "peerDependencies": {
-    "ethers": "6.13.2",
-    "hardhat": "2.22.10"
+    "ethers": "^6.0.0",
+    "hardhat": "^2.0.0"
   },
   "engines": {
     "node": ">=18.0.0"
