--- a/packages/ethers-provider-fireblocks/package.json
+++ b/packages/ethers-provider-fireblocks/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@appliedblockchain/silentdatarollup-ethers-provider-fireblocks",
-  "version": "1.0.7",
-  "description": "Ethers.js provider for Silent Data [Rollup] with Fireblocks integration",
+  "version": "1.0.8",
+  "description": "Ethers.js provider for Silent Data with Fireblocks integration",
   "author": "Applied Blockchain",
   "homepage": "https://github.com/appliedblockchain/silent-data-rollup-providers#readme",
   "keywords": [
@@ -32,7 +32,7 @@
     "prepack": "npm run build"
   },
   "dependencies": {
-    "@appliedblockchain/silentdatarollup-core": "1.0.7",
+    "@appliedblockchain/silentdatarollup-core": "1.0.8",
     "@fireblocks/fireblocks-web3-provider": "1.3.8",
     "debug": "4.3.4",
     "ethers": "6.13.2"
