--- a/packages/ethers-provider/package.json
+++ b/packages/ethers-provider/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@appliedblockchain/silentdatarollup-ethers-provider",
-  "version": "1.0.7",
-  "description": "Ethers.js provider for Silent Data [Rollup]",
+  "version": "1.0.8",
+  "description": "Ethers.js provider for Silent Data",
   "author": "Applied Blockchain",
   "homepage": "https://github.com/appliedblockchain/silent-data-rollup-providers#readme",
   "keywords": [
@@ -32,7 +32,7 @@
     "test": "jest"
   },
   "dependencies": {
-    "@appliedblockchain/silentdatarollup-core": "1.0.7",
+    "@appliedblockchain/silentdatarollup-core": "1.0.8",
     "debug": "4.3.7",
     "ethers": "6.13.2"
   },
