--- a/packages/hardhat-plugin-fireblocks/package.json
+++ b/packages/hardhat-plugin-fireblocks/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@appliedblockchain/silentdatarollup-hardhat-plugin-fireblocks",
-  "version": "1.0.7",
-  "description": "Hardhat plugin for Silent Data [Rollup] with Fireblocks integration",
+  "version": "1.0.8",
+  "description": "Hardhat plugin for Silent Data with Fireblocks integration",
   "author": "Applied Blockchain",
   "homepage": "https://github.com/appliedblockchain/silent-data-rollup-providers#readme",
   "keywords": [
@@ -32,7 +32,7 @@
     "prepack": "npm run build"
   },
   "dependencies": {
-    "@appliedblockchain/silentdatarollup-core": "1.0.7",
+    "@appliedblockchain/silentdatarollup-core": "1.0.8",
     "@fireblocks/fireblocks-web3-provider": "1.3.8",
     "@fireblocks/hardhat-fireblocks": "1.3.5",
     "debug": "4.3.7",
