--- a/packages/hardhat-plugin/package.json
+++ b/packages/hardhat-plugin/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@appliedblockchain/silentdatarollup-hardhat-plugin",
-  "version": "1.0.7",
-  "description": "Hardhat plugin for Silent Data [Rollup]",
+  "version": "1.0.8",
+  "description": "Hardhat plugin for Silent Data",
   "author": "Applied Blockchain",
   "homepage": "https://github.com/appliedblockchain/silent-data-rollup-providers#readme",
   "keywords": [
@@ -31,7 +31,7 @@
     "prepack": "npm run build"
   },
   "dependencies": {
-    "@appliedblockchain/silentdatarollup-core": "1.0.7",
+    "@appliedblockchain/silentdatarollup-core": "1.0.8",
     "@nomicfoundation/hardhat-ethers": "3.0.8",
     "debug": "4.3.7",
     "ethers": "6.13.2"
