--- a/examples/hardhat-plugin-fireblocks/package.json
+++ b/examples/hardhat-plugin-fireblocks/package.json
@@ -4,10 +4,13 @@
   "private": true,
   "packageManager": "pnpm@10.23.0",
   "scripts": {
-    "deploy": "hardhat compile && hardhat ignition deploy ignition/modules/PrivateToken.ts"
+    "compile": "hardhat compile",
+    "deploy:private-token": "hardhat compile && hardhat ignition deploy ignition/modules/PrivateToken.ts"
   },
   "dependencies": {
+    "@appliedblockchain/silentdatarollup-core": "workspace:*",
     "@appliedblockchain/silentdatarollup-hardhat-plugin-fireblocks": "workspace:*",
+    "@fireblocks/fireblocks-web3-provider": "1.3.8",
     "@nomicfoundation/hardhat-ignition-ethers": "0.15.9",
     "@nomicfoundation/hardhat-ignition": "0.15.9",
     "@nomicfoundation/hardhat-toolbox": "5.0.0",
