--- a/examples/viem-nodejs/package.json
+++ b/examples/viem-nodejs/package.json
@@ -4,16 +4,19 @@
   "private": true,
   "packageManager": "pnpm@10.23.0",
   "scripts": {
+    "contract-interaction": "ts-node src/contract-interaction.ts",
     "get-balance": "ts-node src/get-balance.ts",
     "transfer-balance": "ts-node src/transfer-balance.ts"
   },
   "dependencies": {
+    "@appliedblockchain/silentdatarollup-core": "workspace:*",
+    "@appliedblockchain/silentdatarollup-ethers-provider": "workspace:*",
     "@appliedblockchain/silentdatarollup-viem": "workspace:*",
     "dotenv": "16.4.5",
     "viem": "2.31.4"
   },
   "devDependencies": {
     "ts-node": "10.9.2",
-    "typescript": "5.7.3"
+    "typescript": "5.6.2"
   }
 }
