--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@appliedblockchain/silentdatarollup-core",
-  "version": "1.0.9",
+  "version": "1.0.10",
   "description": "Core library for Silent Data",
   "author": "Applied Blockchain",
   "homepage": "https://github.com/appliedblockchain/silent-data-rollup-providers#readme",
@@ -34,6 +34,8 @@
     "prepack": "pnpm build"
   },
   "dependencies": {
+    "@peculiar/x509": "1.14.2",
+    "asn1js": "3.0.7",
     "debug": "4.3.7",
     "ethers": "6.13.2"
   },
