--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -8,19 +8,22 @@ minimumReleaseAge: 2880 # 2 days in minutes
 minimumReleaseAgeExclude:
   - '@appliedblockchain/silentdatarollup-core'
   - '@appliedblockchain/silentdatarollup-custom-rpc'
-  - '@appliedblockchain/silentdatarollup-ethers-provider'
   - '@appliedblockchain/silentdatarollup-ethers-provider-fireblocks'
-  - '@appliedblockchain/silentdatarollup-hardhat-plugin'
+  - '@appliedblockchain/silentdatarollup-ethers-provider'
   - '@appliedblockchain/silentdatarollup-hardhat-plugin-fireblocks'
+  - '@appliedblockchain/silentdatarollup-hardhat-plugin'
+  - '@appliedblockchain/silentdatarollup-viem-fireblocks'
   - '@appliedblockchain/silentdatarollup-viem'
 
 overrides:
+  '@isaacs/brace-expansion': 5.0.1
   cookie: 0.7.0
   diff: 8.0.3
   glob: 10.5.0
   h3: 1.15.5
-  hono: 4.11.4
+  hono: 4.11.7
   jws: 3.2.3
+  lodash: 4.17.23
   preact: 10.27.3
   qs: 6.14.1
   tmp: 0.2.4
