--- a/examples/hardhat-plugin/package.json
+++ b/examples/hardhat-plugin/package.json
@@ -19,6 +19,7 @@
     "@nomicfoundation/hardhat-ignition-ethers": "0.15.9",
     "@nomicfoundation/hardhat-ignition": "0.15.9",
     "@nomicfoundation/hardhat-toolbox": "5.0.0",
+    "@nomicfoundation/hardhat-verify": "2.1.3",
     "@openzeppelin/contracts": "5.1.0",
     "dotenv": "16.4.5",
     "hardhat": "^2.18.0"
